tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__chat_composer__tests__footer_collapse_empty_mode_only.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                          "
"› Ask Ody to do anything  "
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"         1% context left  "
"  context: 98.8% (988K/1M)"
