tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_only.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 4661
expression: terminal.backend()
---
"                          "
"› Ask Ody to do anything  "
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"  【 📝 Plan 】           " Hidden by multi-width symbols: [(3, " "), (6, " "), (14, " ")]
